<resources>
    <string name="app_name">Catalogue Movie</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_title">Movie</string>
    <string name="tv_show_title">TV Show</string>
    <string name="imdb">IMDB :</string>
    <string name="imdb_score">IMDB</string>
    <string name="release_date">Release Date : </string>
    <string name="end_date">End Date</string>
    <string name="author_dummy">Rosevalt Toldo</string>
    <string name="author">Author</string>
    <string name="storyline">Storyline</string>
    <string name="popularity">Popularity</string>
</resources>
