<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-16dp"
                app:cardCornerRadius="@dimen/dp_24">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_marginStart="@dimen/dp_16"
                        android:layout_marginTop="@dimen/dp_24"
                        android:backgroundTint="@color/colorPrimary"
                        android:src="@drawable/ic_arrow_back_white_24dp"
                        app:borderWidth="0dp"
                        app:fabSize="mini"
                        app:rippleColor="@color/colorPrimaryDark" />

                    <ImageView
                        android:id="@+id/iv_movies"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_300"
                        android:scaleType="centerCrop"
                        android:src="@drawable/poster_how_to_train" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_300"
                        android:src="@drawable/background_gradient_dark_to_bottom" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:gravity="bottom"
                        android:orientation="vertical"
                        android:padding="@dimen/dp_16">

                        <TextView
                            android:id="@+id/tv_title_movies"
                            style="@style/TextAppearance.AppCompat.Title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="How To Train Your Dragon"
                            android:textColor="@color/colorWhite" />

                        <TextView
                            android:id="@+id/tv_subtitle_movies"
                            style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_7"
                            android:text="How To Train Your Dragon"
                            android:textColor="@color/colorWhite" />

                    </LinearLayout>

                </FrameLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_score_imdb"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dp_7"
                        android:textColor="@color/colorPrimary"
                        tools:text="7.6/10" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dp_3"
                        android:text="@string/imdb_score"
                        android:textColor="@color/colorPrimary" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_score_popularity"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dp_7"
                        android:textColor="@color/colorPrimary"
                        tools:text="4.6/5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dp_3"
                        android:text="@string/popularity"
                        android:textColor="@color/colorPrimary" />

                </LinearLayout>

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_16">

                <ImageView
                    android:id="@+id/iv_thumbnail"
                    android:layout_width="@dimen/dp_110"
                    android:layout_height="@dimen/dp_160"
                    android:layout_alignParentEnd="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/poster_how_to_train" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_toStartOf="@id/iv_thumbnail"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_7"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/release_date"
                            android:textColor="@color/colorPrimary" />

                        <TextView
                            android:id="@+id/tv_release_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_7"
                            android:textColor="@color/colorPrimaryDark"
                            tools:text="January 9, 2019" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_16"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/end_date"
                            android:textColor="@color/colorPrimary" />

                        <TextView
                            android:id="@+id/tv_end_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_7"
                            android:textColor="@color/colorPrimaryDark"
                            tools:text="January 9, 2019" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_16"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/author"
                            android:textColor="@color/colorPrimary" />

                        <TextView
                            android:id="@+id/tv_author"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_7"
                            android:text="@string/author_dummy"
                            android:textColor="@color/colorPrimaryDark" />

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_16"
                android:text="@string/storyline"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/tv_body_movie"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_16"
                android:text="Hiccup (Jay Baruchel) is a Norse teenager from the island of Berk, where fighting dragons is a way of life. His progressive views and weird sense of humor make him a misfit, despite the fact that his father (Gerard Butler) is chief of the clan. Tossed into dragon-fighting school, he endeavors to prove himself as a true Viking, but when he befriends an injured dragon he names Toothless, he has the chance to plot a new course for his people's future." />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
